--- a/binary_reader/Cargo.toml
+++ b/binary_reader/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "clr_lite"
+name = "binary_reader"
 version = "0.1.0"
 authors = ["Leo Battle <leowbattle@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-binary_reader = { path = "../binary_reader" }
-bitflags = "1.2.1"
