--- a/test_program/Cargo.toml
+++ b/test_program/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clr_lite = { path = "../clr_lite" }
