--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
 			"cwd": "${workspaceFolder}",
 			"environment": [],
 			"externalConsole": false,
-			"preLaunchTask": "Rust: cargo build - clr_lite"
+			"preLaunchTask": "build"
 		}
 	]
 }
