--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,29 +8,7 @@
 				"$rustc"
 			],
 			"group": "build",
-			"label": "Rust: cargo build - clr_lite"
-		},
-		{
-			"label": "copy_dlls",
-			"group": "build",
-			"type": "shell",
-			"command": "python",
-			"args": [
-				"libraries/copy_dlls.py",
-				"debug"
-			]
-		},
-		{
-			"label": "build",
-			"dependsOn": [
-				"copy_dlls",
-				"Rust: cargo build - clr_lite"
-			],
-			"problemMatcher": [],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			}
+			"label": "build"
 		}
 	]
 }
